@@ -10,3 +10,5 @@
 	smulls	r1, r0, r9, r11
 	umlaleqs r2, r9, r4, r9
 	smlalge r14, r10, r8, r14
+
+	msr	CPSR_x, #0	@ This used to be illegal, but rev 2 of the ARM ARM allows it.
