@@ -1,2 +1,0 @@
-@ illegal set of CPSR from immediate value
-	msr	cpsr, #0
